# python-semver-release

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
greetings/: program.py
